# lmdb

./: .gitignore  README.md  pyproject.toml  top_10_grossing.ipynb
data/: README.txt
notebooks/: top_10_grossing.ipynb
scripts/: create_list_of_movies.py  create_movie_database.py  create_wiki_database.py
utils/: __init__.py  parsing_utils.py  wikipedia_utils.py
