[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lmdb"
version = "0.0.0"
description = "Wikipedia movie DB helpers"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "ollama>=0.3.0",
]

[tool.setuptools]
packages = ["utils"]

